sandbox/stderr_file_compiler.txt
sandbox/a.c:3:1: error: unknown type name ‘it’
 it main() {
 ^
